<resources>
    <string name="app_name">Grocerie_planner</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="the_grocery_planner">The Grocery Planner</string>
    <string name="grocery_shopping_has_never_been_this_much_fun">Grocery Shopping has never been this much fun</string>
    <string name="emailText">username :</string>
    <string name="passwordText">Password :</string>
    <string name="submitButton">Submit :</string>
    <string name="dot_loading">...</string>
    <string name="meal_categories">Meal Categories</string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="Ingredients">INGREDIENTS</string>
    <string name="youtube">YOUTUBE</string>
    <string name="source">SOURCE</string>
    <string name="favorite">Favorite</string>
    <string name="add">Add</string>
    <string name="insert">Add image</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
