<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailText" />
        <EditText
            android:id="@+id/emailedittext"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_marginStart="15sp"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordText" />
        <EditText
            android:id="@+id/passwordedittext"
            android:inputType="textPassword"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"/>
    </LinearLayout>
    <Button
        android:id="@+id/sbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"

        android:text="@string/submitButton"
        />
</LinearLayout>